--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,1 @@
-{
-    "routes": [
-        {
-            "src" : "/api/data",
-            "dest": "/"
-        }
-    ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
